# ArbitraryFormatSerializer

./: .travis.yml  README.md  appveyor.yml
arbitrary_format/: implement_save_load_serialize.h  serialization_exceptions.h  serialize.h
arbitrary_format/binary_formatters/: bit_formatter.h  endian_formatter.h  inefficient_size_prefix_formatter.h  size_prefix_formatter.h  string_formatter.h  verbatim_formatter.h
arbitrary_format/binary_serializers/: CoutSerializer.h  ISerializer.h  IZeroCopySerializer.h  MemorySerializer.h  ScopedSerializer.h  VectorSaveSerializer.h  ZeroCopyVectorSerializer.h
arbitrary_format/formatters/: array_formatter.h  collection_formatter.h  const_formatter.h  ensure_empty.h  ensure_value.h  external_value.h  generic_formatter.h  map_formatter.h  object_formatter.h  optional_formatter.h  serialize_buffer.h  tuple_formatter.h  vector_formatter.h
arbitrary_format/utility/: bit_packer.h  char_types.h  compile_time_string.h  has_member.h  has_method.h  integer_of_size.h
arbitrary_format/xml_formatters/: assign_name.h  assign_text_content.h  attribute_formatter.h  content_check.h  declaration_formatter.h  document_formatter.h  element_counter.h  element_formatter.h  hex_stringizer.h  lexical_stringizer.h
arbitrary_format/xml_serializers/: RapidXmlTree.h
benchmarks/: Benchmarks.cpp
ci-builds/: build.sh  coverity_model.cpp  download-boost.bat  download-boost.sh  prepare-build.bat  prepare-build.sh  test.bat  test.sh
docs/: Formatters.md  Todo.md  XmlSerialization.md
source/binary_formatters/: bit_formatter.h  endian_formatter.h  inefficient_size_prefix_formatter.h  size_prefix_formatter.h  string_formatter.h  verbatim_formatter.h
source/binary_serializers/: CoutSerializer.h  ISerializer.h  IZeroCopySerializer.h  MemorySerializer.h  ScopedSerializer.h  SizeCountingSerializer.h  VectorSaveSerializer.h  ZeroCopyVectorSerializer.h
source/formatters/: any_formatter.h  const_formatter.h  external_value.h  fixed_size_array_formatter.h  (+11 more)
tests/: BitFormatterTests.cpp  ContainerFormattersTests.cpp  EndianFormatterTests.cpp  MetaProgrammingTests.cpp  TestRunner.cpp  VariousTests.cpp
thrash/: BinarySerializer.cpp  BitSerializer.h  BitTests.cpp  CMakeLists.txt  Example-Person.cpp  Playground.cpp  XmlSerializer.cpp  thrash.h
(+19 files in other folders)
